Cuted Up the Canvas Write and Draw

--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -3,22 +3,23 @@
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#3E818A" >
 
+ <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/draw"
+         android:layout_margin="3dp" />
 
+    	
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_gravity="center" 
         android:orientation="horizontal">
         
-        <ImageButton
-            android:id="@+id/clear_button"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/clear_drawing"
-            android:src="@drawable/clear"
-            android:onClick="clearImage"/>
+        
  
         <ImageButton
             android:id="@+id/brush_button"
@@ -26,7 +27,9 @@
             android:layout_height="fill_parent"
             android:contentDescription="@string/brush_size"
             android:src="@drawable/brush"
-            android:onClick="changeBrushSize"/>
+            android:onClick="changeBrushSize"
+            android:background="@null"
+            android:layout_margin="5dp"/>
           
         <ImageButton
             android:id="@+id/erase_button"
@@ -34,7 +37,9 @@
             android:layout_height="fill_parent"
             android:contentDescription="@string/erase"
             android:onClick="eraseImage"
-            android:src="@drawable/erase"/>
+            android:src="@drawable/erase"
+            android:background="@null"
+            android:layout_margin="3dp"/>
             
   
         <ImageButton
@@ -43,9 +48,11 @@
            	android:layout_height="fill_parent"
            	android:contentDescription="@string/color"
            	android:src="@drawable/color"
-           	android:onClick="changeColor"/>
+           	android:onClick="changeColor"
+           	android:background="@null"
+           	 android:layout_margin="3dp"/>
         </LinearLayout>
-
+        
     	<com.example.telephone_pictionary.DrawingTools
    	 		android:id="@+id/drawing"
     		android:layout_width="fill_parent"
@@ -55,34 +62,50 @@
    		 	android:layout_marginRight="5dp"
     		android:layout_marginTop="3dp"
     		android:layout_weight="1"
-    		android:background="#FFFFFFFF" />
+    		android:background="#FFFFFFFF"
+    		 />
     	
+ 
     	<LinearLayout 
     	    android:layout_width = "wrap_content"
     	   	android:layout_height = "30dp"
     	   	android:layout_gravity="center"
-    		android:orientation="horizontal">
-    	   
+    		android:orientation="horizontal"
+    		>
+
+    		<ImageButton
+    		    android:id="@+id/back_button"
+    		    android:layout_width="wrap_content"
+    		    android:layout_height="fill_parent"
+    		    android:background="@null"
+    		    android:contentDescription="@string/back"
+    		    android:src="@drawable/back" />
+    	        	  
     	    <ImageButton
-           		android:id="@+id/back_button"
-           		android:layout_width="wrap_content"
-           		android:layout_height="fill_parent"
-           		android:contentDescription="@string/back"
-           		android:src="@drawable/back" />
-    	        	    
-    		 <ImageButton
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/clear_drawing"
+            android:src="@drawable/clear"
+            android:onClick="clearImage"
+            android:background="@null"
+        	android:layout_margin="3dp"/>
+    		
+    	    <ImageButton
         	    android:id="@+id/save_button"
             	android:layout_width="wrap_content"
             	android:layout_height="fill_parent"
            		android:contentDescription="@string/save"
            		android:src="@drawable/save"
-           		android:onClick="savetoDevice"/>
+           		android:onClick="savetoDevice"
+           		android:background="@null"/>
               
        	 	<ImageButton
            		android:id="@+id/send_button"
            		android:layout_width="wrap_content"
            		android:layout_height="fill_parent"
            		android:contentDescription="@string/send"
-           		android:src="@drawable/send"/>
+           		android:src="@drawable/send"
+           		android:background="@null"/>
     	</LinearLayout>
 </LinearLayout>
