Fixes for XML files

--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -106,7 +106,7 @@
            		android:layout_height="fill_parent"
            		android:contentDescription="@string/send"
            		android:src="@drawable/send"
-           		android:onclick="submitImage"
+           		android:onClick="submitImage"
            		android:background="@null"/>
     	</LinearLayout>
 </LinearLayout>
