--- a/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
@@ -23,7 +23,7 @@
     		android:layout_marginTop="3dp"
     		android:layout_weight="1"
     		android:background="#FFFFFFFF" 
-    		 android:onClick ="writeDialog"
+    		android:onClick ="writeDialog"
     		/> 
     	
     	<LinearLayout 
@@ -46,9 +46,9 @@
            		android:layout_width="wrap_content"
            		android:layout_height="fill_parent"
            		android:contentDescription="@string/send"
-          		android:onclick="submitImage"
+          		android:onClick="submitImage"
            		android:src="@drawable/send"
-      		   android:background="@null"/>
+      		   	android:background="@null"/>
     	</LinearLayout>
     
 </LinearLayout>
