--- a/Telephone-Pictionary/res/layout/activity_card_viewer.xml
+++ b/Telephone-Pictionary/res/layout/activity_card_viewer.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:contentDescription="@string/back"
+            android:onClick="toCanvas"
             android:src="@drawable/forward" />
     </LinearLayout>
 
