--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -6,12 +6,27 @@
     android:orientation="vertical"
     android:background="#3E818A" >
 
+
+
+ <RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
  <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/draw"
          android:layout_margin="3dp" />
-
+ 
+   	<ImageButton
+    	    android:id="@+id/explanationbutton"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content"
+    	    android:layout_marginTop="2dp"
+    	    android:background="@drawable/questionmark"
+    	    android:layout_alignParentRight="true"
+    	    android:onClick="gameDirections" />
+</RelativeLayout>
+    
     	
     <LinearLayout
         android:layout_width="wrap_content"
@@ -108,5 +123,8 @@
            		android:src="@drawable/send"
            		android:onClick="submitImage"
            		android:background="@null"/>
+       	 	
     	</LinearLayout>
+
+
 </LinearLayout>
