--- a/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
@@ -7,14 +7,16 @@
     android:background="#3E818A" >
 
    
- <RelativeLayout
+ 	<RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
- <ImageView
+ 	
+ 	<ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/type"
          android:layout_margin="3dp" />
+ 
  
    	<ImageButton
     	    android:id="@+id/explanationbutton"
@@ -24,26 +26,14 @@
     	    android:background="@drawable/questionmark"
     	    android:layout_alignParentRight="true"
     	    android:onClick="gameDirections" />
-</RelativeLayout>
-    
-    	<com.example.telephone_pictionary.WritingTools
-   	 		android:id="@+id/writing"
-    		android:layout_width="fill_parent"
-    		android:layout_height="0dp"
-    		android:layout_marginBottom="3dp"
-    		android:layout_marginLeft="5dp"
-   		 	android:layout_marginRight="5dp"
-    		android:layout_marginTop="3dp"
-    		android:layout_weight="1"
-    		android:background="#FFFFFFFF" 
-    		android:onClick ="writeDialog"
-    		/> 
-    	
-    	<LinearLayout 
-    	    android:layout_width = "wrap_content"
-    	   	android:layout_height = "30dp"
-    	   	android:layout_gravity="center"
-    		android:orientation="horizontal">
+	</RelativeLayout>
+	
+ 		<LinearLayout
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content"
+    	    android:layout_gravity="center"
+   
+    	    android:orientation="horizontal" >
     	   
     	    <ImageButton
            		android:id="@+id/back_button"
@@ -63,5 +53,26 @@
            		android:src="@drawable/send"
       		   	android:background="@null"/>
     	</LinearLayout>
+    		
+  
+		 <EditText
+		     android:id="@+id/writingeditor"
+	       	android:layout_width="fill_parent"
+    		android:layout_height="0dp"
+    		android:layout_marginBottom="3dp"
+    		android:layout_marginLeft="5dp"
+   		 	android:layout_marginRight="5dp"
+    		android:layout_marginTop="3dp"
+    		android:layout_weight="1"
+	        android:padding="5dip" 
+	       android:gravity="center"
+    		android:background="#FFFFFFFF" 
+    		android:textSize = "40dp"
+    		android:inputType="textMultiLine|textNoSuggestions"
+    		 >
+     </EditText>
     
+    
+    
+     	
 </LinearLayout>
