--- a/Telephone-Pictionary/res/layout/activity_explanation.xml
+++ b/Telephone-Pictionary/res/layout/activity_explanation.xml
@@ -1,48 +1,64 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.telephonepictionary.Explanation" >
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:orientation="vertical"
+     android:background="#3E818A" >
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop = "16dp"
+    android:paddingBottom = "16dp"
+    android:layout_marginRight = "10dp"
+    android:layout_marginTop = "10dp"
+    android:layout_marginLeft = "10dp"  
+    android:layout_marginBottom = "10dp"
+    android:orientation="vertical"
+    android:background="#98BAC3" >
     
+        
     <TextView
         android:id="@+id/TelephonePic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Description"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:text="About the Game the regular version"
+         android:layout_marginRight = "7dp"
+        android:layout_marginLeft = "7dp"
+        android:text="@string/about_game"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/TelephonePic"
+     
+        android:layout_marginRight = "7dp"
+        android:layout_marginLeft = "7dp"
         android:text="The normal version can be explained here."
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/HowToUse"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Description"
-        android:layout_below="@+id/Description"
+        android:layout_height="wrap_content" 
+        android:layout_marginRight = "7dp"
+        android:layout_marginLeft = "7dp"
         android:text="@string/pass_play"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/Instructions"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/HowToUse"
-        android:layout_below="@+id/HowToUse"
+        android:layout_height="wrap_content" 
+        android:layout_marginRight = "7dp"
+        android:layout_marginLeft = "7dp"
         android:text="@string/pass_play_instr"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-</RelativeLayout>
+  </LinearLayout>
+    
+        
+</LinearLayout>
