--- a/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
@@ -54,24 +54,28 @@
       		   	android:background="@null"/>
     	</LinearLayout>
     		
-  
 		 <EditText
 		     android:id="@+id/writingeditor"
-	       	android:layout_width="fill_parent"
-    		android:layout_height="0dp"
-    		android:layout_marginBottom="3dp"
-    		android:layout_marginLeft="5dp"
-   		 	android:layout_marginRight="5dp"
-    		android:layout_marginTop="3dp"
-    		android:layout_weight="1"
-	        android:padding="5dip" 
-	       android:gravity="center"
-    		android:background="#FFFFFFFF" 
-    		android:textSize = "40dp"
-    		android:inputType="textMultiLine|textNoSuggestions"
-    		 >
+		     android:layout_width="fill_parent"
+		     android:layout_height="0dp"
+		     android:layout_marginBottom="3dp"
+		     android:layout_marginLeft="5dp"
+		     android:layout_marginRight="5dp"
+		     android:layout_marginTop="3dp"
+		     android:layout_weight="0.96"
+		     android:background="#FFFFFFFF"
+		     android:gravity="center"
+		     android:inputType="textMultiLine|textNoSuggestions"
+		     android:padding="5dip"
+		     android:textSize="40sp" >
+
      </EditText>
-    
+    		<LinearLayout
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="10dp"
+    	    android:layout_gravity="center"
+    	    android:orientation="horizontal" >
+       	 	</LinearLayout>
     
     
      	
