--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -38,6 +38,7 @@
     		    android:id="@+id/back_button"
     		    android:layout_width="wrap_content"
     		    android:layout_height="fill_parent"
+    		    android:onClick="toCardView"
     		    android:background="@null"
     		    android:contentDescription="@string/back"
     		    android:src="@drawable/back" />
