--- a/Telephone-Pictionary/res/layout/activity_end_game.xml
+++ b/Telephone-Pictionary/res/layout/activity_end_game.xml
@@ -5,7 +5,8 @@
     tools:context="${relativePackage}.${activityClass}" 
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="#3E818A"  >
 
  <android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
