--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -8,16 +8,19 @@
 
 
 
- <RelativeLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
- <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/draw"
-         android:layout_margin="3dp" />
+ 	<RelativeLayout
+  	  android:layout_width="wrap_content"
+  	  android:layout_height="wrap_content"
+  	  android:layout_marginTop="10dp"
+  	  android:layout_marginBottom="10dp"  >
  
-   	<ImageButton
+ 		<ImageView
+     	   android:layout_width="wrap_content"
+     	   android:layout_height="wrap_content"
+     	   android:src="@drawable/draw"
+       	   android:layout_margin="3dp" />
+ 
+   		<ImageButton
     	    android:id="@+id/explanationbutton"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
@@ -25,14 +28,13 @@
     	    android:background="@drawable/questionmark"
     	    android:layout_alignParentRight="true"
     	    android:onClick="gameDirections" />
-</RelativeLayout>
+	</RelativeLayout>
     
-    		<LinearLayout 
-    	    android:layout_width = "wrap_content"
-    	   	android:layout_height = "30dp"
-    	   	android:layout_gravity="center"
-    		android:orientation="horizontal"
-    		>
+  <RelativeLayout
+       android:layout_width="wrap_content"
+   		android:layout_height = "30dp"
+   		android:layout_marginBottom="10dp" >
+    	
 
     		<ImageButton
     		    android:id="@+id/back_button"
@@ -40,18 +42,11 @@
     		    android:layout_height="fill_parent"
     		    android:onClick="toCardView"
     		    android:background="@null"
+   		  	    android:layout_alignParentLeft="true"		
     		    android:contentDescription="@string/back"
-    		    android:src="@drawable/back" />
+    		    android:src="@drawable/toclue" />
     	        	  
-    	    <ImageButton
-            android:id="@+id/clear_button"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/clear_drawing"
-            android:src="@drawable/clear"
-            android:onClick="clearImage"
-            android:background="@null"
-        	android:layout_margin="3dp"/>
+    	 
     		
     	    <ImageButton
         	    android:id="@+id/save_button"
@@ -59,6 +54,7 @@
             	android:layout_height="fill_parent"
            		android:contentDescription="@string/save"
            		android:src="@drawable/save"
+    			android:layout_centerInParent="true"
            		android:onClick="savetoDevice"
            		android:background="@null"/>
               
@@ -68,11 +64,11 @@
            		android:layout_height="fill_parent"
            		android:contentDescription="@string/send"
            		android:src="@drawable/send"
+           	    android:layout_alignParentRight="true"		
            		android:onClick="submitImage"
            		android:background="@null"/>
        	 	
-    	</LinearLayout>
-  
+  </RelativeLayout>
         
     	<com.example.telephone_pictionary.DrawingTools
    	 		android:id="@+id/drawing"
@@ -90,8 +86,9 @@
     
   <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_gravity="center" 
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp" 
         android:orientation="horizontal">
         
         
@@ -104,17 +101,9 @@
             android:src="@drawable/brush"
             android:onClick="changeBrushSize"
             android:background="@null"
-            android:layout_margin="5dp"/>
+            android:layout_margin="10dp"/>
           
-        <ImageButton
-            android:id="@+id/erase_button"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/erase"
-            android:onClick="eraseImage"
-            android:src="@drawable/erase"
-            android:background="@null"
-            android:layout_margin="3dp"/>
+
             
   
         <ImageButton
@@ -125,7 +114,38 @@
            	android:src="@drawable/color"
            	android:onClick="changeColor"
            	android:background="@null"
-           	 android:layout_margin="3dp"/>
+           	 android:layout_margin="10dp"/>
+   
+        </LinearLayout>
+        
+  <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center" 
+        android:layout_marginBottom="10dp" 
+        android:orientation="horizontal">
+        
+              
+                <ImageButton
+            android:id="@+id/erase_button"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/erase"
+            android:onClick="eraseImage"
+            android:src="@drawable/erase"
+            android:background="@null"
+            android:layout_margin="10dp"/>
+                
+           <ImageButton
+            android:id="@+id/clear_button"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/clear_drawing"
+            android:src="@drawable/clear"
+            android:onClick="clearImage"
+            android:background="@null"
+        	android:layout_margin="10dp"/>
+           
         </LinearLayout>
 
 </LinearLayout>
