--- a/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
@@ -9,7 +9,9 @@
    
  	<RelativeLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content" 
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp">
  	
  	<ImageView
         android:layout_width="wrap_content"
@@ -28,32 +30,35 @@
     	    android:onClick="gameDirections" />
 	</RelativeLayout>
 	
- 		<LinearLayout
-    	    android:layout_width="wrap_content"
-    	    android:layout_height="wrap_content"
-    	    android:layout_gravity="center"
-   
-    	    android:orientation="horizontal" >
-    	   
-    	    <ImageButton
-           		android:id="@+id/back_button"
-           		android:layout_width="wrap_content"
-           		android:layout_height="fill_parent"
-           		android:contentDescription="@string/back"
-           		android:src="@drawable/back"
-           		android:background="@null"
-           		android:onClick="toCardView" />
-    	        	    
+ 	  <RelativeLayout
+       android:layout_width="wrap_content"
+   		android:layout_height = "30dp"
+   		android:layout_marginBottom="10dp">
+    	
 
+    		<ImageButton
+    		    android:id="@+id/back_button"
+    		    android:layout_width="wrap_content"
+    		    android:layout_height="fill_parent"
+    		    android:onClick="toCardView"
+    		    android:background="@null"
+   		  	    android:layout_alignParentLeft="true"		
+    		    android:contentDescription="@string/back"
+    		    android:src="@drawable/toclue" />
+    	        	  
+   
+              
        	 	<ImageButton
            		android:id="@+id/send_button"
            		android:layout_width="wrap_content"
            		android:layout_height="fill_parent"
            		android:contentDescription="@string/send"
-          		android:onClick="submitImage"
            		android:src="@drawable/send"
-      		   	android:background="@null"/>
-    	</LinearLayout>
+           	    android:layout_alignParentRight="true"		
+           		android:onClick="submitImage"
+           		android:background="@null"/>
+       	 	
+  </RelativeLayout>
     		
 		 <EditText
 		     android:id="@+id/writingeditor"
