--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -12,7 +12,8 @@
   	  android:layout_width="wrap_content"
   	  android:layout_height="wrap_content"
   	  android:layout_marginTop="10dp"
-  	  android:layout_marginBottom="10dp"  >
+  	  android:layout_marginBottom="10dp"  
+  	  android:paddingRight = "5dp">
  
  		<ImageView
      	   android:layout_width="wrap_content"
@@ -33,7 +34,8 @@
   <RelativeLayout
        android:layout_width="wrap_content"
    		android:layout_height = "30dp"
-   		android:layout_marginBottom="10dp" >
+   		android:layout_marginBottom="10dp" 
+   		android:paddingRight = "5dp">
     	
 
     		<ImageButton
