--- a/Telephone-Pictionary/res/layout/activity_card_viewer.xml
+++ b/Telephone-Pictionary/res/layout/activity_card_viewer.xml
@@ -9,13 +9,17 @@
     
  <RelativeLayout
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
- <ImageView
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:paddingRight = "5dp">
+ 
+ 	<ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/view"
-         android:layout_margin="3dp" />
- 
+       android:layout_margin="3dp" />
+
    	<ImageButton
     	    android:id="@+id/explanationbutton"
     	    android:layout_width="wrap_content"
@@ -24,38 +28,56 @@
     	    android:background="@drawable/questionmark"
     	    android:layout_alignParentRight="true"
     	    android:onClick="gameDirections" />
-</RelativeLayout>
+	
+	</RelativeLayout>
+   
+ 	
+ 	<RelativeLayout
+      	android:layout_width="wrap_content"
+   		android:layout_height = "30dp"
+   		android:layout_marginBottom="10dp"
+   		android:paddingRight = "5dp">
+        
+        <ImageButton
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/save"
+            android:layout_alignParentLeft="true"		
+            android:onClick="savetoDevice"   
+            android:background = "@null"
+            android:src="@drawable/save" />
+
+        <ImageButton
+            android:id="@+id/toDraw"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/back"
+            android:onClick="toCanvas"
+            android:layout_alignParentRight="true"		
+            android:background = "@null"
+            android:src="@drawable/todraw" />
+  
+        <ImageButton
+            android:id="@+id/toGuess"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/back"
+            android:onClick="toCanvas"
+            android:layout_alignParentRight="true"		
+            android:background = "@null"
+            android:src="@drawable/toguess" />
+  
+        
+        </RelativeLayout>
     
+  
     <ImageView
         android:id="@+id/prevCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
          />
     
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/save_button"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/save"
-            android:onClick="savetoDevice"   
-            android:background = "@null"
-            android:src="@drawable/save" />
-
-        <ImageButton
-            android:id="@+id/foward_button"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:contentDescription="@string/back"
-            android:onClick="toCanvas"
-            android:background = "@null"
-            android:src="@drawable/forward" />
-    </LinearLayout>
-    
+   
     
 </LinearLayout>
