adding host & join game classes

--- a/Telephone-Pictionary/res/layout/activity_main.xml
+++ b/Telephone-Pictionary/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:background="@drawable/hostgame"
-        android:onClick="newGame"/> 
+        android:onClick="hostGame"/> 
         
     
     <ImageButton
