Fixed up several dialogs, commented code, rewrote part of brush size

--- a/Telephone-Pictionary/res/drawable-mdpi/large.xml
+++ b/Telephone-Pictionary/res/drawable-mdpi/large.xml
@@ -6,6 +6,6 @@
         android:height="@dimen/l_brush"
         android:width="@dimen/l_brush" />
  
-    <solid android:color="#53868B" />
+    <solid android:color="#276275" />
  
 </shape>
