--- a/Telephone-Pictionary/res/drawable-mdpi/small.xml
+++ b/Telephone-Pictionary/res/drawable-mdpi/small.xml
@@ -6,6 +6,6 @@
         android:height="@dimen/s_brush"
         android:width="@dimen/s_brush" />
  
-    <solid android:color="#53868B" />
+    <solid android:color="#276275" />
  
 </shape>
