--- a/Telephone-Pictionary/res/layout/activity_end_game.xml
+++ b/Telephone-Pictionary/res/layout/activity_end_game.xml
@@ -32,6 +32,34 @@
 	</RelativeLayout>
 	
  
+ 	<RelativeLayout
+      	android:layout_width="wrap_content"
+   		android:layout_height = "30dp"
+   		android:layout_marginBottom="5dp"
+   		android:paddingRight = "5dp">
+        
+        <ImageButton
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/save"
+            android:layout_alignParentLeft="true"		
+            android:onClick="savetoDevice"   
+            android:background = "@null"
+            android:src="@drawable/save" />
+  
+        <ImageButton
+            android:id="@+id/playagain"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/back"
+            android:onClick="playagain"
+            android:layout_alignParentRight="true"		
+            android:background = "@null"
+            android:src="@drawable/playagain" />
+  
+        
+        </RelativeLayout>
   
  <android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
