--- a/Telephone-Pictionary/res/layout/activity_end_game.xml
+++ b/Telephone-Pictionary/res/layout/activity_end_game.xml
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:contentDescription="@string/back"
-            android:onClick="playagain"
+            android:onClick="toMain"
             android:layout_alignParentRight="true"		
             android:background = "@null"
             android:src="@drawable/playagain" />
