--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -21,14 +21,32 @@
      	   android:src="@drawable/draw"
        	   android:layout_margin="3dp" />
  
+ 		 	   <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp" 
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+        
    		<ImageButton
     	    android:id="@+id/explanationbutton"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
-    	    android:layout_marginTop="2dp"
+    	    android:layout_marginTop="4dp"
     	    android:background="@drawable/questionmark"
-    	    android:layout_alignParentRight="true"
     	    android:onClick="toInstructions" />
+   		
+   		<ImageButton
+   		    android:id="@+id/exit"
+   		    android:layout_width="34dp"
+   		    android:layout_height="34dp"
+   		    android:layout_marginTop="4dp"
+   		    android:background="@drawable/xsymbol"
+   		    android:onClick="toInstructions" />
+   		
+       	 	</LinearLayout>
+   		
 	</RelativeLayout>
     
   <RelativeLayout
@@ -48,7 +66,7 @@
     		    android:contentDescription="@string/back"
     		    android:src="@drawable/toclue" />
     	        	  
-    	 
+   
     		
     	    <ImageButton
         	    android:id="@+id/save_button"
@@ -69,6 +87,7 @@
            	    android:layout_alignParentRight="true"		
            		android:onClick="submitImage"
            		android:background="@null"/>
+       	 	
        	 	
   </RelativeLayout>
         
