--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -43,7 +43,7 @@
    		    android:layout_height="34dp"
    		    android:layout_marginTop="4dp"
    		    android:background="@drawable/xsymbol"
-   		    android:onClick="toInstructions" />
+   		    android:onClick="toMain" />
    		
        	 	</LinearLayout>
    		
