--- a/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_writer.xml
@@ -21,14 +21,32 @@
          android:layout_margin="3dp" />
  
  
-   	<ImageButton
+  
+ 		 	   <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp" 
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal">
+        
+   		<ImageButton
     	    android:id="@+id/explanationbutton"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
-    	    android:layout_marginTop="2dp"
+    	    android:layout_marginTop="4dp"
     	    android:background="@drawable/questionmark"
-    	    android:layout_alignParentRight="true"
     	    android:onClick="toInstructions" />
+   		
+   		<ImageButton
+   		    android:id="@+id/exit"
+   		    android:layout_width="34dp"
+   		    android:layout_height="34dp"
+   		    android:layout_marginTop="4dp"
+   		    android:background="@drawable/xsymbol"
+   		    android:onClick="toMain" />
+   		
+       	 	</LinearLayout>
 	</RelativeLayout>
 	
  	  <RelativeLayout
