Just layouting changes

--- a/Telephone-Pictionary/res/drawable-mdpi/paint_selected.xml
+++ b/Telephone-Pictionary/res/drawable-mdpi/paint_selected.xml
@@ -1,9 +1,9 @@
-  <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle" >
             <stroke
                 android:width="4dp"
-                android:color="#FF333333" />
+                android:color="#FFFFFF" />
  
             <solid android:color="#00000000" />
  
@@ -18,7 +18,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android" >
             <stroke
                 android:width="4dp"
-                android:color="#FF333333" />
+                android:color="#6597A7" />
  
             <solid android:color="#00000000" />
  
